--- a/src/app/components/tools/sidebar-menu-porteur/sidebar-menu-porteur.component.css
+++ b/src/app/components/tools/sidebar-menu-porteur/sidebar-menu-porteur.component.css
@@ -1,50 +1,54 @@
-.container {
-    padding-top: 10px;
+.container{
     width: 20%;
-    position: fixed;
-    min-width: 200px;
-    background-color: white;
     height: 100%;
-    min-height: 500px;
-    z-index: 2;
-    border-right: 1px solid rgba(0, 0, 0, 0.5);
-    border-left: 1px solid rgba(0, 0, 0, 0.5);
+    position: fixed;
+    display: grid;
+    min-width: 256px;
+    min-height: 560px;
+    grid-template-rows: 45% 10% 45%;
+    box-shadow: 0px 0px 10px 0 rgba(169, 124, 124, 0.3);
+}
+
+.menus-text, p {
+    white-space: nowrap;
 }
 
 .container.collapsed {
     width: 5%;
-    min-width: 62px;
-}
-
-.right-separator.expanded {
-    left: 20%;
-}
-
-.icones {
-    font-size: 24px;
-    color: #334DAA;
+    min-width: 64px;
 }
 
 p {
-    font-size: 12px;
+    font-size: 10pt;
+}
+
+.icons {
+    width: fit-content;
+    height: fit-content;
+    font-size: 24px;
     color: #334DAA;
-    width: 200px;
+    margin: 0;
 }
 
-#side-expander-container {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    bottom: 50%;
-    z-index: 3;
-}
-
-#logo-container {
-    display: flex;
-    align-items: center;
+.menus-text {
+    width: fit-content;
+    height: fit-content;
     justify-content: center;
-    flex-direction: column;
-    width: 100%;
+    margin: 0;
+    color: #334DAA;
+    font-size: 10pt;
+}
+
+.top-container {
+    display: grid;
+    grid-template-rows: 30% 70%;
+}
+
+.logo-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo {
@@ -52,84 +56,136 @@ p {
     height: auto;
 }
 
-.logo.collapsed {
-    width: 60%;
+.logo:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
-.menu-items-container {
-    width: auto;
-    height: auto;
+.top-menus-container {
     display: flex;
     flex-direction: column;
-    margin-left: 18px;
-    gap: 10px;
-    margin-top: 15px;
 }
 
-.menu-items-container.collapsed-top {
-    margin-top: 30px;
-}
-
-.menu-items {
-    gap: 10px;
-    height: 30px;
-    align-items: center;
-    justify-content: start;
+.menu-container {
+    width: 70%;
+    height: fit-content;
+    margin-right: 10%;
+    margin-left: 10%;
+    transition: all 0.2s ease-in-out;
     display: grid;
     grid-template-columns: auto auto;
+    align-items: center;
+    justify-content: start;
+    gap: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
-.bottom-content {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    position: fixed;
-    width: 20%;
-    bottom: 0;
+.menu-container.collapsed {
+    gap: 0px;
+    justify-content: center;
+    width: fit-content;
+    align-self: center;
 }
 
-.profile-icone-frame {
-    background-color: black;
-    border: 2px solid #334DAA;
-    width: 12px;
-    height: 12px;
+.menu-container:hover {
+    cursor: pointer;
+    transform: translate(10px, 0px);
+    background-color: #d0daff;
+    border-radius: 10px;
+}
+
+.menu-container.collapsed:hover {
+    transform: scale(1.2);
+}
+
+.center-container {
     display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+}
+
+.side-expander {
     align-items: center;
     justify-content: center;
-    border-radius: 100px;
-    padding: 5px;
+    transition: all 0.2s ease-in-out;
+    margin-right: 10px;
 }
 
-.profile-icone-frame.chosen {
-    background-color: #334DAA;
-    border: 2px solid black;
-}
-
-.menu-items-container.expanded-bottom {
-    margin-bottom: 4.5px;
-}
-
-#contact-us-frame {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 62px;
-    border-top: 1px solid black;
-    margin-top: 10px;
-}
-
-.bottom-content.collapsed {
-    width: 5%;
-}
-
-/**/
-
-.icones:hover {
+.side-expander:hover{
+    cursor: pointer;
     transform: scale(1.3);
+    background-color: #334DAA;
+    border-radius: 100px;
 }
 
-#sidebar-expander-container:active {
-    transform: rotate(180deg);
+.side-expander-ic:hover {
+    color: white;
+}
+
+.bottom-container {
+    display: grid;
+    grid-template-rows: 75% 25%;
+}
+
+.bottom-menus-container {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.profile-ic {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 100px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-ic.chosen {
+    background-color: #334DAA;
+    border: 2px solid #334DAA
+}
+
+.ri-user-3-fill {
+    color: black;
+}
+
+.ri-user-3-fill.chosen {
+    color: white;
+}
+
+.side-footer-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.question-mark-ic {
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.question-mark-ic:hover {
+    cursor: pointer;
+    transform: scale(0.9);
+    background-color: #d0daff;
+    border: 5px;
 }
