Ajoute les sidebars des différents utilisateurs

--- a/src/app/components/inscription/inscription-choix/inscription-choix.component.html
+++ b/src/app/components/inscription/inscription-choix/inscription-choix.component.html
@@ -18,7 +18,7 @@
           Vous avez des idées? Mais pas de ressources nécessaires pour leur concrétisation? Proposer les en tant que
         </p>
         <div class="a">
-          <a  (click)="choix('IDEE')">Porteur de projet <i class="ri-arrow-right-fill"></i> </a>
+          <a  (click)="choix('PORTEUR_PROJET')">Porteur de projet <i class="ri-arrow-right-fill"></i> </a>
         </div>
 
       </div>
