Finalise la partie droite de la page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,11 @@
     grid-template-columns: 5% 95%;
 }
 
+.principal-container.signin {
+    display: contents;
+    grid-template-columns: none;
+}
+
 .pages-container, .sidebar-container {
     width: 100%;
     transition: width 0.3s ease-in-out;
