--- a/src/app/components/UI/header/header.component.html
+++ b/src/app/components/UI/header/header.component.html
@@ -10,11 +10,11 @@
         
         <div class="bouton-section">
             <div class="buttons">
-                <button class="button1">
-                    <a routerLink="/login">Se connecter</a>
+                <button class="button1" routerLink="/login">
+                    <a>Se connecter</a>
                 </button>
-                <button class="button2">
-                    <a routerLink="/inscription">S'inscrire</a>
+                <button class="button2" routerLink="/inscription">
+                    <a>S'inscrire</a>
                 </button>
             </div>
         </div>
